--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@ blockquote{border-left:1px solid #A5ABAB; margin:0px; padding:0 12px 0 12px;}
 p{line-height: 30px; margin:30px auto; text-indent: 0px;}
 
 a {text-decoration: none;}
-a:link {color: #ffa500; text-decoration: none;}
-a:visited {color: #ffa500; text-decoration: none;}
-a:hover {color: #999; text-decoration: none;}
+a:link {color: #999; text-decoration: none;}
+a:visited {color: #999; text-decoration: none;}
+a:hover {color: #ffa500; text-decoration: none;}
 
 ul{padding: .5em 0em 1em 3.2em;}
 li{line-height: 30px; padding: 6px 0 0 0;}
