--- a/style.css
+++ b/style.css
@@ -23,7 +23,10 @@ Author URI: http://mnmlist.com
 This theme is uncopyrighted, free, and offered as is.
 .
 */
-
+@font-face{
+   font-family: gotham-light;
+   src: url('http://fonts.getup.org.au/gotham/Gotham-Light.ttf') url('http://fonts.getup.org.au/gotham/Gotham-Light.eot');
+}
 
 body {
 	background: #fff; 
@@ -32,9 +35,9 @@ body {
         line-height: 30px;
 	}
 	
-h1 {font-family: Helvetica, sans-serif; font-size: 1em; color:#333; font-weight:normal;  padding: 20px 0px 0px 0px;}
-h2 {font-family: Helvetica, sans-serif; font-size: 1.5em; color:#333; line-height:26px; font-weight:normal; padding: 5px 0px 10px 0px;}
-h3 {font-family: Helvetica, sans-serif; font-size: 18px; color:#666; line-height: 15px; text-indent: 0px; padding: 10px 0px 0px 0px;}
+h1 {font-family: gotham-light, Helvetica, sans-serif; font-size: 1em; color:#333; font-weight:normal;  padding: 20px 0px 0px 0px;}
+h2 {font-family: gotham-light, sans-serif; font-size: 1.5em; color:#333; line-height:26px; font-weight:normal; padding: 5px 0px 10px 0px;}
+h3 {font-family: gotham-light, sans-serif; font-size: 18px; color:#666; line-height: 15px; text-indent: 0px; padding: 10px 0px 0px 0px;}
 h4 {font-family: Georgia, "Times New Roman", Times, serif; font-size: 1em; color:#000000;}
 h5 {font-size: 9pt; color:#000000;}
 
