--- a/style.css
+++ b/style.css
@@ -35,9 +35,9 @@ body {
         line-height: 30px;
 	}
 	
-h1 {font-family: gotham-light, Helvetica, sans-serif; font-size: 1em; color:#333; font-weight:normal;  padding: 20px 0px 0px 0px;}
-h2 {font-family: gotham-light, sans-serif; font-size: 1.5em; color:#333; line-height:26px; font-weight:normal; padding: 5px 0px 10px 0px;}
-h3 {font-family: gotham-light, sans-serif; font-size: 18px; color:#666; line-height: 15px; text-indent: 0px; padding: 10px 0px 0px 0px;}
+h1 {font-family: 'Roboto', sans-serif; font-size: 1em; color:#333; font-weight:normal;  padding: 20px 0px 0px 0px;}
+h2 {font-family: 'Roboto', sans-serif; font-size: 1.5em; color:#333; line-height:26px; font-weight:normal; padding: 5px 0px 10px 0px;}
+h3 {font-family: 'Roboto', sans-serif; font-size: 18px; color:#666; line-height: 15px; text-indent: 0px; padding: 10px 0px 0px 0px;}
 h4 {font-family: Georgia, "Times New Roman", Times, serif; font-size: 1em; color:#000000;}
 h5 {font-size: 9pt; color:#000000;}
 
