--- a/style.css
+++ b/style.css
@@ -13,16 +13,7 @@ h1
 
 }*/
 
-/*   
-Theme Name: mnmlist
-Theme URI: http://mnmlist.com/theme/
-Description: A very clean minimalist theme, without comments, search, archives or other features.
-Author: Leo Babauta
-Author URI: http://mnmlist.com
-.
-This theme is uncopyrighted, free, and offered as is.
-.
-*/
+
 @font-face{
    font-family: gotham-light;
    src: url('http://fonts.getup.org.au/gotham/Gotham-Light.ttf') url('http://fonts.getup.org.au/gotham/Gotham-Light.eot');
@@ -30,7 +21,7 @@ This theme is uncopyrighted, free, and offered as is.
 
 body {
 	background: #fff; 
-	font: 20px Hoefler Text, "Times New Roman", Times, serif;
+	font: 20px Helvetica-Neue, Helvetica, sans-serif;
 	color: #333;
         line-height: 30px;
 	}
